# hcrl_isaac_manager

./: .gitignore  Makefile  README.md  gitman.yml  justfile  pyproject.toml  workspace.defaults.yaml  workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: github-org-teams.md  repo-reorg-design.md
scripts/: .env.bash  Dockerfile.base  cluster.sh  configure_workspace.py  container.sh  export_envs.sh  new_tasks.py  ray.sh  resolve_workspace.py  utils.sh  video_listener.sh
scripts/cluster/: Dockerfile.base  README.md  add_cluster.sh  build_sif.sh  cluster_interface.sh  run_singularity.sh
scripts/cluster/cluster_dev/: README.md  cluster_dev.sh  node_exec.sh  sentinel.sbatch
scripts/cluster/config/delta/: submit_job_slurm.sh
scripts/cluster/config/ls6/: submit_job_slurm.sh
scripts/cluster/config/ls6_distributed/: submit_job_slurm.sh
scripts/cluster/tools/: .env.cluster.template  .env.wandb.template  submit_job_slurm.template.sh
scripts/docker/: Dockerfile  build_image.sh  docker_interface.sh  entrypoint.sh
scripts/isaacsim/: setup_conda_env.sh  setup_python_env.sh
scripts/larg/: README.md  bench.sh  common.sh  deploy.sh  pull_gpu_stats.py  remote_setup.sh  sync.sh  train.sh  video_logger.sh
scripts/ray/: Dockerfile  README.md  bench_job_config.yaml  build_file_mounts.py  install-git-lfs.sh  job_config.yaml  list_jobs.py  ray.cfg  ray_interface.sh  submit_job.py
scripts/ray/tools/: .env.ray.template  bench_job_config.template.yaml  job_config.template.yaml  job_config_distributed.template.yaml
scripts/tools/: ask.py  setup_vscode.py  ui.py
(+3 files in other folders)
